--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -191,7 +191,7 @@ jobs:
       - name: Finish label
         run: |
           cd "$GITHUB_WORKSPACE/tests/ci"
-          python3 finish_check.py
+          python3 finish_check.py --wf-status ${{ contains(needs.*.result, 'failure') && 'failure' || 'success' }} 
 
 #############################################################################################
 ###################################### JEPSEN TESTS #########################################
